--- a/sass/componentes/_mediaQueryMobile.scss
+++ b/sass/componentes/_mediaQueryMobile.scss
@@ -2,31 +2,11 @@
     body{
         .encabezadoGeneral{
             width: 100%;
-            &__sectionUno{
-                font-size: 10px;
-                width: 100%;
-                padding:0;
-                margin-bottom: 0;
-                p{
-                    font-size: 13px;
-                }
-            }
-            &__sectionDos{
-                padding: 7px;
-                display:flex;
-                flex-flow: row wrap;
-                justify-content: flex-start;
-                margin-right: 0;
-                font-size: 11px;
-                .buttonHeader a{
-                    font-size: 16px;
-                }
-            }
             &__sectionTres{
                 width: 100%;
                 padding: 1% 0;
                 &__tituloPrincipal{
-                    font-size: 15px;
+                    font-size: 22px;
                 }
             }
             &__contenedorListaMenu{
@@ -37,10 +17,11 @@
             }
         }
         .mainGeneral{
+            width: 100%;
             &__mainInicio{
                 h2{
                     text-align: center;
-                    font-size: 15px;
+                    font-size: 19px;
                 }
                 &__fotoInicio1{
                     img{
@@ -48,14 +29,6 @@
                         height: 120px;
                     }
                 }
-            }
-            .fotoCarrousel{
-                padding-left: 16px;
-                width: 380px;
-                height: 300px;
-            }
-            .contenedorCarrouselSoloInicio{
-                display: block;
             }
             &__contenedorConjunto{
                 display: grid;
@@ -67,7 +40,7 @@
                 "conjunto9 .";
                 grid-template-rows: repeat(5, 1fr) ;
                 grid-template-columns: repeat(2, 1fr);
-                width: 80%;
+                width: 100%;
                 margin: 0 auto;
                 padding-top:11px ;
                 padding-bottom: 11px ;
@@ -93,16 +66,32 @@
                 text-align: center;
                 font-size: 10px;
             }
+            .imagenLinkInicio{
+                margin-top: 75px;
+                height: 133.33px;
+            }
+            .imagenLinkInicio1{
+                margin-top: 35px;
+                height: 133.33px;
+            }
+            .destacados{
+                height: 700px;
+            }
         }
         .footerGeneral{
             width: 100%;
-            height: 320px;
+            height: 375px;
             display: block;
             justify-content: space-between;
             list-style: none;
             font-size: 10px;
             padding-left: 10px;
-            
+            h5{
+                font-size: 18px;
+            }
+            p{
+                font-size: 15px;
+            }
             .footerDerechosAutor{
                 margin-bottom: 0 !important;
             }
@@ -115,12 +104,19 @@
             }
             .parrafoMapaDeSitio{
                 width: 52px;
-                height: 72px;
+                height: 68px;
                 color: #f5c6aa;
             }
             .botonFooterContacto{
                 display: none;
             }
+            .linkMapaDeSitio{
+                font-size: 15px;
+                &__1{
+                    display: none;
+                }
+            }
+            
         }
         
     }
