--- a/sass/componentes/_mediaQueryDesktop.scss
+++ b/sass/componentes/_mediaQueryDesktop.scss
@@ -51,6 +51,10 @@
                     }
                 }
             }
+            &__partePrincipalParrafoPoliticas{
+                padding-top: 55px;
+                font-size: 20px;
+            }
         }
         .footerGeneral{
             width: 100%;
