--- a/css/style.css
+++ b/css/style.css
@@ -75,17 +75,13 @@ body {
       font-size: 27px; }
     body .mainGeneral__partePrincipalParrafoPoliticas {
       width: 100%;
-      height: 800px;
+      height: 650px;
+      padding-top: 100px;
       background-color: #f8e2cf;
+      font-size: 22px;
       text-align: center; }
       body .mainGeneral__partePrincipalParrafoPoliticas ol {
         list-style: none; }
-    body .mainGeneral__partePrincipalParrafoEnvios {
-      width: 100%;
-      background-color: #f8e2cf;
-      text-align: left; }
-      body .mainGeneral__partePrincipalParrafoEnvios ul {
-        list-style: circle; }
   body .mainGeneral {
     width: 100%; }
     body .mainGeneral__mainInicio {
@@ -249,6 +245,9 @@ body .Nueve {
     font-size: 20px; }
   body .mainGeneral__contenedorConjunto__conjunto h3 {
     font-size: 20px; }
+  body .mainGeneral__partePrincipalParrafoPoliticas {
+    padding-top: 55px;
+    font-size: 20px; }
   body .footerGeneral {
     width: 100%;
     display: flex;
@@ -311,6 +310,10 @@ body .Nueve {
       font-size: 20px; }
     body .mainGeneral__contenedorConjunto__conjunto h3 {
       font-size: 20px; }
+  body .mainGeneral__partePrincipalParrafoPoliticas {
+    height: 700px;
+    padding-top: 35px;
+    font-size: 20px; }
   body .footerGeneral {
     width: 100%;
     display: flex;
@@ -378,6 +381,9 @@ body .Nueve {
       height: 133.33px; }
     body .mainGeneral .destacados {
       height: 700px; }
+    body .mainGeneral__partePrincipalParrafoPoliticas {
+      padding-top: 35px;
+      font-size: 15px; }
   body .footerGeneral {
     width: 100%;
     height: 375px;
