--- a/sass/componentes/_mediaQueryMobile.scss
+++ b/sass/componentes/_mediaQueryMobile.scss
@@ -77,6 +77,10 @@
             .destacados{
                 height: 700px;
             }
+            &__partePrincipalParrafoPoliticas{
+                padding-top: 35px;
+                font-size: 15px;
+            }
         }
         .footerGeneral{
             width: 100%;
