--- a/sass/componentes/_mediaQueryTablet.scss
+++ b/sass/componentes/_mediaQueryTablet.scss
@@ -72,6 +72,11 @@
                     }
                 }
             }
+            &__partePrincipalParrafoPoliticas{
+                height: 700px;
+                padding-top: 35px;
+                font-size: 20px;
+            }
         }
         .footerGeneral{
             width: 100%;
