--- a/sass/main.scss
+++ b/sass/main.scss
@@ -96,19 +96,13 @@ body{
         }
         &__partePrincipalParrafoPoliticas{
             width: 100%;
-            height: 800px;
+            height: 650px;
+            padding-top: 100px;
             background-color: $color-terciario;
+            font-size: 22px;
             text-align: center;
             ol{
                 list-style: none;
-            }
-        }
-        &__partePrincipalParrafoEnvios{
-            width: 100%;
-            background-color: $color-terciario;
-            text-align: left;
-            ul{
-                list-style:circle;
             }
         }
     }
